Complied docstring to Numpy style

--- a/example/ApophisMissionAnalysis.ipynb
+++ b/example/ApophisMissionAnalysis.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=(10,5))\n",
-    "target_sat_radec, target_sat_color = satastro.astrometry_target_plot(sat_teme, target_teme, \n",
+    "target_sat_radec, target_sat_color = satastro.astrometry_target_plot(target_teme, observer=sat_teme,\n",
     "                                                                     target_name=target_name, \n",
     "                                                                     fig=fig, ax=ax, \n",
     "                                                                     return_radec=True, return_color=True)\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
     }
    ],
    "source": [
-    "satastro.astrometry_target_plot(sat_teme, target_teme, target_name=target_name, mask=visibility_mask)"
+    "satastro.astrometry_target_plot(target_teme, observer=sat_teme, target_name=target_name, mask=visibility_mask)"
    ]
   },
   {
